core/core/main/model/objects/Sentry_Event__e/fields/Breadcrumbs_Json__c.field-meta.xml
<CustomField>
    <fullName>Breadcrumbs_Json__c</fullName>
    <label>Breadcrumbs Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>