core/core/main/model/objects/Sentry_Event__e/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>32 Chars of an Uuid without dashes.</description>
    <label>Event Id</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>