core/core/main/model/objects/Sentry_Event__e/fields/Exception_Json__c.field-meta.xml
<CustomField>
    <fullName>Exception_Json__c</fullName>
    <label>Exception Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>