core/core/main/model/objects/Sentry_Event__e/fields/Extra_Json__c.field-meta.xml
<CustomField>
    <fullName>Extra_Json__c</fullName>
    <label>Extra Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>