core/core/main/model/objects/Sentry_Event__e/fields/Formatted_LogEntry__c.field-meta.xml
<CustomField>
    <fullName>Formatted_LogEntry__c</fullName>
    <label>Formatted LogEntry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>