core/core/main/model/objects/Sentry_Event__e/fields/User_Json__c.field-meta.xml
<CustomField>
    <fullName>User_Json__c</fullName>
    <label>User Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>